--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,22 @@
+
+.link-nav{
+    text-decoration: none;
+   color:darkorange;
+   display: flex;
+}
+.list{
+    list-style: none;
+    margin: 15px;
+    padding: 15px;
+    display: flex;
+}
+.nav{
+    display: flex;
+    text-align: center;
+}
+
+
+
 .Pic-Description{
     display: flex;
     margin-bottom: 2opx;
@@ -90,4 +109,11 @@ border: 3px solid tomato;
 border-radius: 9px;
 height: 100%;
 
+}
+.footer{
+    color: black;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+    font-size: 25px;
 }
